objects/PC_GroupMember__mdt.object
<CustomObject>
    <description>This is used to define the members of a group</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_FieldName__c</fullName>
        <inlineHelpText>This field will contain field API Name or developer name without namespaceprefix. In case of standard field such as Record Type Field Name would be RecordType only.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_FieldValue__c</fullName>
        <inlineHelpText>This field will store field value which needs to be grouped . In case of standard field such as RecordType it would be qualified api name i.e. recordtype with namespaceprefix.</inlineHelpText>
        <label>Field Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Field_Namespace__c</fullName>
        <label>Field Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Group__c</fullName>
        <label>Group</label>
        <referenceTo>PC_Group__mdt</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PC_ObjectName__c</fullName>
        <inlineHelpText>This Field will store the API Name of Object i.e. Developer Name without Namespace</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Object_Namespace__c</fullName>
        <inlineHelpText>This field will store namespace prefix associated with the Sobject name.</inlineHelpText>
        <label>Object Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group Member</label>
    <pluralLabel>Group Members</pluralLabel>
</CustomObject>